--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "async-validator": "^4.0.7",
     "core-js": "^3.8.3",
+    "snabbdom": "^0.7.4",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
