--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build:client": "vue-cli-service build",
+    "build:server": "cross-env WEBPACK_TARGET=node vue-cli-service build",
+    "build": "npm run build:server && npm run build:client"
   },
   "dependencies": {
     "async-validator": "^4.0.7",
     "core-js": "^3.8.3",
+    "express": "^4.17.3",
+    "serve-favicon": "^2.5.0",
     "snabbdom": "^0.7.4",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-server-renderer": "^2.6.14",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -19,9 +23,13 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "cross-env": "^7.0.3",
+    "lodash.merge": "^4.6.2",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "webpack-merge": "^4.2.2",
+    "webpack-node-externals": "^3.0.0"
   },
   "browserslist": [
     "> 1%",
